Closed Bug 1465787 Opened 6 years ago Closed 6 years ago

Startup crash in nviewh64.dll@0x98c31

Categories

(External Software Affecting Firefox :: Other, defect)

x86_64
Windows
defect
Not set
critical

Tracking

(firefox-esr52 unaffected, firefox-esr60 fixed, firefox60 wontfix, firefox61- wontfix, firefox62 fixed, firefox63 fixed, firefox64 fixed)

RESOLVED FIXED
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- fixed
firefox60 --- wontfix
firefox61 - wontfix
firefox62 --- fixed
firefox63 --- fixed
firefox64 --- fixed

People

(Reporter: philipp, Assigned: philipp)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(2 files, 2 obsolete files)

This bug was filed from the Socorro interface and is
report bp-0f53f9ac-6ad6-440b-af79-139530180530.
=============================================================

Top 10 frames of crashing thread:

0 nviewh64.dll nviewh64.dll@0x98c31 
1  @0x502a9 
2 nviewh64.dll nviewh64.dll@0xc99d0 
3 kernelbase.dll ReleaseMutex 
4 nviewh64.dll nviewh64.dll@0xc9dd0 
5 nviewh64.dll nviewh64.dll@0xc923e 
6 nviewh64.dll nviewh64.dll@0xb7dfe 
7 nviewh64.dll nviewh64.dll@0xba479 
8 nviewh64.dll nviewh64.dll@0xa8bc1 
9 nviewh64.dll nviewh64.dll@0xaa30c 

=============================================================

this is a startup crash signature (divided by 0 crash) in a third-party module belonging to NVIDIA's nView Desktop Management Software. the crash has been around for a while, but seems to have gotten a bit more frequent during the 61.0a1 & 61.0b cycle.
putting nviewh64.dll on the dll blocklist would be successful in getting it out of our process.
never have used this software so far myself so i don't know how useful it may be to users or what workflows it could break for them in case we decide blocking it.
Attached patch bug1465787.patch (obsolete) — Splinter Review
prospective patch in case we go forward with blocklisting the crashing dll.
Not going to track this, but I'll happily take a fix for 61 still.
I've tried to contact NVIDIA through the mailing list.
Attached patch bug1465787.patch (obsolete) — Splinter Review
limiting the scope of the blocklist to the file's versions, which show up as affected in our crash-stats data.
Attachment #8982286 - Attachment is obsolete: true
the crashes seem to have mostly gone in beta 11 and later. if it's continuing like this, we can probably just close the bug. ni on myself to check again in a couple of days.
Flags: needinfo?(madperson)
crash volume on beta has declined again and it doesn't seem to be impacting 61 release in particular.
Status: NEW → RESOLVED
Closed: 6 years ago
Flags: needinfo?(madperson)
Resolution: --- → WORKSFORME
the crash was returning during 62.0b and now on 62.0 release as well. did the contacts with nvidia bring any other fruitful results or should we progress with blocklisting?
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Attachment #8984058 - Flags: review?(mcastelluccio)
I've tried to contact them again.
Flags: needinfo?(mcastelluccio)
Comment on attachment 8984058 [details] [diff] [review]
bug1465787.patch

Review of attachment 8984058 [details] [diff] [review]:
-----------------------------------------------------------------

I've rerun the analysis and 6.14.10.14847 is still the main crashy version.

NVIDIA confirmed this is an old version and that users won't be negatively impacted by the block (they will just lose the nView features on Firefox, but better losing them than crashing at startup).
Attachment #8984058 - Flags: review?(mcastelluccio) → review+
Flags: needinfo?(mcastelluccio)
Attached patch bug1465787.patchSplinter Review
sorry, when nominating the former patch for review i missed that the windows dll blocklist has been reorganised since (bug 1445025). this new patch should accommodate the new circumstances.
Assignee: nobody → madperson
Attachment #8984058 - Attachment is obsolete: true
Attachment #9009989 - Flags: review?(mcastelluccio)
Attachment #9009989 - Flags: review?(mcastelluccio) → review+
Keywords: checkin-needed
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/mozilla-inbound/rev/52871b889095
Add old versions of nviewh64.dll to the dll blocklist. r=marco
Keywords: checkin-needed
Comment on attachment 9009989 [details] [diff] [review]
bug1465787.patch

Approval Request Comment
[Feature/Bug causing the regression]: outdated version of third-party nview desktop management software that is hooking into the browser
[User impact if declined]: startup crashes for some users
[Is this code covered by automated tests?]: n/a
[Has the fix been verified in Nightly?]: i wasn't able to reproduce the crashing in the first place but can confirm in a local installation that the patch successfully blocks nviewh64.dll v6.14.10.14847 and lower from hooking into the browser process
[Needs manual test from QE? If yes, steps to reproduce]: n/a
[List of other uplifts needed for the feature/fix]: n/a
[Is the change risky?]: no
[Why is the change risky/not risky?]: it's making use of the purpose-built dll
blocklist. the block is in relation to a one and a half year old module that has been superseded with a fixed version by the vendor.
[String changes made/needed]: n/a
Attachment #9009989 - Flags: approval-mozilla-release?
Attachment #9009989 - Flags: approval-mozilla-beta?
https://hg.mozilla.org/mozilla-central/rev/52871b889095
Status: REOPENED → RESOLVED
Closed: 6 years ago6 years ago
Resolution: --- → FIXED
Comment on attachment 9009989 [details] [diff] [review]
bug1465787.patch

Uplift approved for 63 beta 8, thanks.
Attachment #9009989 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment on attachment 9009989 [details] [diff] [review]
bug1465787.patch

blacklist old versions of nview to fix crash, approved for 62.0.2
Attachment #9009989 - Flags: approval-mozilla-release? → approval-mozilla-release+
Please nominate this for ESR60 uplift.
Flags: needinfo?(madperson)
this would be the blocklisting patch accommodating esr60 - however i have no option in the bugzilla attachment view to nominate it for esr-approval (only beta & release).
Flags: needinfo?(madperson) → needinfo?(ryanvm)
Comment on attachment 9014840 [details] [diff] [review]
esr60-bug1465787.patch

[ESR Uplift Approval Request]

If this is not a sec:{high,crit} bug, please state case for ESR consideration: 

User impact if declined: 

Fix Landed on Version: 

Risk to taking this patch: Low

Why is the change risky/not risky? (and alternatives if risky): 

String or UUID changes made by this patch:
Flags: needinfo?(ryanvm)
Attachment #9014840 - Flags: approval-mozilla-esr60?
Comment on attachment 9014840 [details] [diff] [review]
esr60-bug1465787.patch

Approved for ESR 60.3.
Attachment #9014840 - Flags: approval-mozilla-esr60? → approval-mozilla-esr60+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: