Bug 1465787 - Add old versions of nviewh64.dll to the dll blocklist. r=marco, a=jcristau